# partis-pris

./: pyproject.toml
examples/: .gitignore  make_container.sh  run_container.py  run_container.sh  spack_config.yaml  spack_modules.yaml  test.py  ubuntu-22.04-base.def
src/partis-pris/: container.py  env_fs.py  env_spec.py  pkg_index.py  resolve.py  utils.py
src/partis-pris/cli/: __main__.py  add.py  audit.py  cli.py  config.py
